--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "dotenv": "^8.2.0",
     "ethers": "^5.1.0",
-    "hardhat": "^2.1.2",
+    "hardhat": "^2.8.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "@uniswap/sdk": "^3.0.3",
+    "axios": "^0.24.0",
+    "colors": "^1.4.0"
   }
 }
