--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "noImplicitAny": true,
     "esModuleInterop": true,
     "outDir": "dist",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noImplicitAny": false
   },
   "exclude": ["./node_modules"]
 }
